[package]
name = "poglog"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
description = "A fast, colorful PostgreSQL JSON log highlighter and SQL formatter for your terminal, written in Rust."
homepage = "https://github.com/amureki/poglog"
repository = "https://github.com/amureki/poglog"
readme = "README.md"
keywords = ["postgresql", "logs", "jsonlog", "sql", "formatter"]
categories = ["command-line-utilities", "database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
colored = "2"
sqlformat = "0.2"
syntect = "5"
serde_json = "1"
